2021-04-19
- nowy przełącznik -bc 'Branch condition test', powoduje wygenerowanie  komunikatów ostrzeżenia w przypadku kiedy skok jest poza zakres lub przekracza stronę pamięci

2021-03-14
- poprawiony skok dla '@ branch @+', który powodował pętlę bez końca

2021-03-07
- zmieniony test przeciwdziałający powstaniu 'infinite loop'
- dodany komunikat ostrzeżenia 'Register A is changed' dla pseudo rozkazów DEW, DEL, DED

2020-11-17
- poprawione parsowanie ciągów znakowych dla argumentu rozkazu, np. lda #'''', lda #""""

2020-10-28
- dodatkowy test przeciwdzialajacy powstaniu 'infinite loop', 't_lab[].lop = true' jeśli ta etykieta powoduje wymuszania kolejnego przebiegu asemblacji
- dodany komunikat ostrzeżenia gdy zostaje wybrane długie odgałęzienie 'bxx *+3 jmp'

2020-07-01 (Daniel Serpell/DMSC) https://atariage.com/forums/topic/308611-mad-assembler-and-floating-point-constants/

- floating-point parsing code rewritten
- new function BCD
- new procedure save_fl